[tool.poetry]
name = "film-metadata-writer"
version = "0.1.0"
description = ""
authors = ["Tobias Knudsen <tobias.hartvedt.knudsen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
pyexiftool = "^0.5.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # Regular flake8 rules
    "C", "E", "F", "W",
    # flake8-bugbear rules
    "B",
    # Import sorting rules
    "I",
    # flake8-comprehensions
    "C4",
    # Pylint rules
    "PLC", "PLE", "PLR", "PLW",
    # Ruff
    "RUF",
]